# access-control

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .travis.yml  CLA.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  COPY_OUT_OF_TREE_MODULES_HERE  Dockerfile  Dockerfile.rpi  Doxyfile  ODB.LICENSE  README.md  _config.yml  build.sh  build_doc.sh  changelog.txt  deb.sh  entrypoint.py  index.html  maintenance.sh  params.json  sonar-project.properties
cfg/: CMakeLists.txt  auth.conf  default.xml  defaultDebug.xml  hardware.xml  hardwareBBB.xml  hardwareCubie2.xml  hardwareDebug.xml  hardwarePi.xml  leosac-base.xml
cfg/basic/: auth.conf  core.xml  hw.xml
cfg/dev-test/: amd64.xml  config.xml  file_auth.xml  rpi-auth2.xml  rpi-sysfs.xml  wiegand-pin.xml  ws-amd64.xml
cfg/empty/: core.xml  hw.xml
cfg/example/guide_rpi_piface_wiegand/: auth.xml  leosac.xml
cfg/factory/: README.md  core.xml  docker.xml  hw.xml  kernel.xml
cfg/piface-rpleth/: README.md  config-box.xml
cfg/sysfs-rpleth/: config.xml
cfg/wiegand_pfdigital/: auth.conf  core.xml  hw.xml
cfg/wiegand_pfdigital_rpleth/: core.xml  hw.xml
cfg/zmq-test/: config-box.xml  config.xml
src/: CMakeLists.txt  LeosacFwd.hpp  core.cpp  core.hpp  event.cpp  event.hpp  general_config.md  leosac.hpp  main.cpp  mainpage.md  my_pch.hpp  osac.cpp  osac.hpp  runtimeoptions.cpp  runtimeoptions.hpp
src/DynLib/: DynamicLibrary.cpp  DynamicLibrary.h
src/Exception/: DynLibException.hpp  MutexException.hpp  OSACException.hpp  SyscallException.hpp  ThreadException.hpp
src/Thread/: IMutex.h  IRunnable.h  IThread.h  Mutex.cpp  Mutex.h  ScopeLock.cpp  ScopeLock.h  Thread.cpp  Thread.h
src/altmodules/: CMakeLists.txt
src/config/: configparser.cpp  configparser.hpp  coreconfig.cpp  coreconfig.hpp  ixmlserializable.hpp  xmlconfig.cpp  xmlconfig.hpp
src/core/: APIStatusCode.hpp  CoreAPI.cpp  CoreAPI.hpp  CoreUtils.cpp  CoreUtils.hpp  GetServiceRegistry.cpp  GetServiceRegistry.hpp  Logger.cpp  Logger.hpp  MessageBus.cpp  MessageBus.hpp  RemoteControl.cpp  RemoteControl.hpp  RemoteControlSecurity.cpp  RemoteControlSecurity.hpp  Scheduler.cpp  Scheduler.hpp  SecurityContext.cpp  SecurityContext.hpp  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  UserSecurityContext.cpp  UserSecurityContext.hpp  authprotocol.cpp  authprotocol.hpp  authrequest.cpp  authrequest.hpp  core.cpp  core.hpp  event.cpp  event.hpp  iauthprotocol.hpp  icommand.hpp  icore.hpp  imoduleprotocol.hpp  kernel.cpp  kernel.hpp  logger.md  (+9 more)
src/core/alarms/: Alarm.cpp  Alarm.hpp  AlarmEntry.cpp  AlarmEntry.hpp  AlarmFwd.hpp  (+1 more)
src/db/: CMakeLists.txt  leosac-profile.options
src/dynlib/: dynamiclibrary.cpp  dynamiclibrary.h  dynamiclibrary.hpp
src/exception/: EntityNotFound.cpp  EntityNotFound.hpp  ExceptionsTools.cpp  ExceptionsTools.hpp  InvalidArgument.hpp  ModelException.cpp  ModelException.hpp  PermissionDenied.cpp  PermissionDenied.hpp  authprotocolexception.hpp  configexception.hpp  coreexception.hpp  deviceexception.hpp  dynlibexception.hpp  fsexception.hpp  gpioexception.hpp  leosacexception.hpp  moduleexception.hpp  moduleprotocolexception.hpp  mutexexception.hpp  osacexception.hpp  scriptexception.hpp  signalexception.hpp  syscallexception.hpp  threadexception.hpp
src/hardware/: Alarm.cpp  Alarm.hpp  Buzzer.cpp  Buzzer.hpp  Device.cpp  Device.hpp  ExternalMessage.cpp  ExternalMessage.hpp  ExternalServer.cpp  ExternalServer.hpp  FBuzzer.hpp  FGPIO.cpp  FGPIO.hpp  FLED.cpp  FLED.hpp  FWiegandReader.cpp  FWiegandReader.hpp  GPIO.cpp  GPIO.hpp  HardwareFwd.hpp  HardwareService.cpp  HardwareService.hpp  LED.cpp  LED.hpp  RFIDReader.cpp  RFIDReader.hpp  hardware.md  hwmanager.cpp  hwmanager.hpp  idevice.hpp  ihwmanager.hpp  iserializabledevice.hpp
src/modules/: AsioModule.cpp  AsioModule.hpp  BaseModule.cpp  BaseModule.hpp  CMakeLists.txt  amoduleloader.cpp  amoduleloader.hpp  iaccesspointmodule.hpp  iaccessrequester.hpp  iactivitymonitormodule.hpp  iauthmodule.hpp  idoormodule.hpp  ieventlistener.hpp  ieventlistenermodule.hpp  iloggermodule.hpp  imodule.hpp  imoduleloader.hpp  imonitormodule.hpp  journallogger.cpp  journallogger.hpp  module_intro.md  moduleconfig.h  modules.md
src/signal/: isignalcallback.hpp  signalhandler.cpp  signalhandler.hpp
src/thread/: imutex.h  imutex.hpp  irunnable.h  irunnable.hpp  ithread.h  ithread.hpp  mutex.cpp  mutex.h  mutex.hpp  scopelock.cpp  scopelock.h  scopelock.hpp  thread.cpp  thread.h  thread.hpp
src/tools/: AssertCast.hpp  BuildString.hpp  Colorize.cpp  Colorize.hpp  Conversion.cpp  Conversion.hpp  DatabaseLogSink.cpp  DatabaseLogSink.hpp  DateTimeConverter.hpp  ElapsedTimeCounter.cpp  ElapsedTimeCounter.hpp  GenGuid.cpp  GenGuid.h  GitSHA1.cpp.in  GitSHA1.hpp  GlobalRegistry.cpp  GlobalRegistry.hpp  ISchedule.hpp  IVisitable.hpp  IVisitor.hpp  JSONSerializer.hpp  JSONUtils.cpp  JSONUtils.hpp  LogEntry.cpp  LogEntry.hpp  Mail.cpp  Mail.hpp  MyTime.cpp  MyTime.hpp  PropertyTreeExtractor.cpp  PropertyTreeExtractor.hpp  SQLiteLogSink.cpp  SQLiteLogSink.hpp  Schedule.cpp  Schedule.hpp  ScheduleMapping.cpp  ScheduleMapping.hpp  Serializer.hpp  SingleTimeFrame.cpp  SingleTimeFrame.hpp  (+45 more)
test/: AccessControl.cpp  AuthFile.cpp  AuthSourceBuilder.cpp  CMakeLists.txt  ConfigManager.cpp  CredentialValidator.cpp  GroupValidator.cpp  Led.cpp  RFIDCard.cpp  Registry.cpp  RemoteControlSecurity.cpp  Rpleth.cpp  ScheduleValidator.cpp  ServiceRegistry.cpp  SysFsGpioConfig.cpp  TcpNotifierProtocol.cpp  Test.md  Visitor.cpp  WiegandCard.cpp  WiegandReader.cpp  WiegandReaderTest.cpp  automaton.cpp  test.cpp  version.cpp
test/data/: AuthFile-1.xml  AuthFile-2.xml  AuthFile-3.xml  AuthFile-4.xml  AuthFile-5.xml  AuthFile-6.xml  AuthFile-7.xml  AuthFile-8.xml  AuthFile-9.xml  ConfigManager1.xml  ConfigManager2.xml  ConfigManager3.xml  ConfigManager4.xml  ConfigManager5.xml  ConfigManager6.xml  ConfigManager7.xml  ConfigManager8.xml  RemoteControlSecurity1.xml  RemoteControlSecurity2.xml  file_auth.xml
test/helper/: FakeGPIO.cpp  FakeGPIO.hpp  FakeWiegandReader.cpp  FakeWiegandReader.hpp  TestHelper.hpp  TestHelper.md
(+969 files in other folders)
