cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

file(COPY . DESTINATION ${LEOSAC_BINARY_DIR}/cfg/ FILES_MATCHING PATTERN "*.xml")
file(COPY . DESTINATION ${LEOSAC_BINARY_DIR}/cfg/ FILES_MATCHING PATTERN "*.conf")

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION share/leosac FILES_MATCHING PATTERN "*.xml")
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION share/leosac FILES_MATCHING PATTERN "*.conf")
